audio_output/pipewire.c: error: implicit declaration of function pw_stream_get_nsec

With 20241115.e8069e64:

[ 127s] audio_output/pipewire.c:130:29: error: implicit declaration of function 'pw_stream_get_nsec'; did you mean 'pw_stream_get_name'? [-Werror=implicit-function-declaration]

This function is apparently unavailable with pipewire-devel-0.3.64.