pipewire: only use pw_stream_get_nsec() past 1.1.0

Fixes #28874